Closed Bug 688366 Opened 14 years ago Closed 14 years ago

[Skia] Fix Skia bug with radial gradients of the same radius

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla10

People

(Reporter: mattwoodrow, Assigned: mattwoodrow)

References

Details

Attachments

(1 file)

Attached patch Fix radius checkSplinter Review
This appears to be an invalid check. Two circles with the same radius, but different center points shouldn't be rendering nothing.
Attachment #561657 - Flags: review?(jmuizelaar)
What's the test case that this affects?
I don't remember exactly, I'll disable this and run tests asap. Looks like there is a skia bug open too: http://code.google.com/p/skia/issues/detail?id=311
Comment on attachment 561657 [details] [diff] [review] Fix radius check Good enough for now.
Attachment #561657 - Flags: review?(jmuizelaar) → review+
Assignee: nobody → matt.woodrow
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
Target Milestone: --- → mozilla10
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: