Bug 688366 - Fix Skia marking radial gradients with the same radius as invalid. r=jrmuizel