gfx/skia/update.sh
@@ -101,3 +101,5 @@ patch -p3 < fix-gradient-clamp.patch
 patch -p3 < getpostextpath.patch
 # Bug 688365 - Enable Skia 'New AA' mode.
 patch -p3 < new-aa.patch
+# Bug 688366 - Fix Skia marking radial gradients with the same radius as invalid.
+patch -p3 < radial-gradients.patch
